# hackupc24-seidor

./: README.md  docker-compose.yml
Alexa Skill/: skill.json
Alexa Skill/interactionModels/custom/: en-US.json
Alexa Skill/lambda/: lambda_function.py  requirements.txt
backend/: .env  Cargo.toml  Dockerfile  start.sh
backend/migrations/2024-05-03-211120_first/: down.sql  up.sql
backend/migrations/2024-05-04-091616_list/: down.sql  up.sql
backend/postgres-data/: postmaster.pid
backend/postgres-data/base/13756/: pg_internal.init
backend/postgres-data/base/16384/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_vm  1259  1259_fsm  1259_vm  16385  16389  17573  17577  17578  17580  17584  17585  17587  17591  17592  17604  17605  17611  17612  2224  2579  2604  2606  2606_fsm  2606_vm  2608  2610  2610_fsm  2610_vm  2619  2619_fsm  2619_vm  2620  (+28 more)
backend/postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
backend/postgres-data/pg_stat_tmp/: db_0.stat  db_13756.stat  db_16384.stat  global.stat
backend/postgres-data/pg_subtrans/: 0000
backend/postgres-data/pg_xact/: 0000
backend/src/: db.rs  main.rs  models.rs  schema.rs
pdf-gen/: dockerfile  pdf_microservice.py  pdfmaker.py  requirements.txt
