[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.*"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"
lazy_static = "1.4"
env_logger = "0.11.*"
log = "0.4.20"